# ros-randla-net

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt
config/: params.yml  visualization.rviz
docker/: Dockerfile  build.sh  entrypoint.sh  exec_container.sh  run_container.sh  run_once.sh  vtk.patch
launch/: pointcloud_segmentation.launch
script/: build_deps.sh  build_deps_py3.sh
src/: RandLANet.py  helper_tool.py  pytorch_utils.py  ros_helper.py  ros_main.py  ros_node.py  test.py  train.py
src/configs/: __init__.py  qdh.py  semantic_kitti.py
src/datasets/: base.py  qdh.py  qdh_inference.py
src/models/: RandLANet.py
src/utils/: 6_fold_cv.py  data_utils.py  helper_tool.py  loss_utils.py  network_utils.py  optim.py  pytorch_utils.py  timer.py
src/utils/cpp_wrappers/cpp_subsampling/: setup.py  wrapper.cpp
src/utils/nearest_neighbors/: setup.py  test.py
