<package format="2">
  <name>ros_randla_net</name>
  <version>0.1.0</version>
  <description>
  This package provides pointcloud segmentation capability by RandLA-Net.
  </description>
  <maintainer email="xxdsox@gmail.com">Yusu Pan</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
